immutabilitatea pe bune, cu java modern