@@ -2,8 +2,8 @@ package victor.training.java.records.intro;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -12,8 +12,16 @@ public class ImmutablePlay {
 
   @Test
   void immutables() {
-    List<Integer> numbers = new ArrayList<>(IntStream.range(1, 10).boxed().toList());
-    Immutable obj = new Immutable("John",
+    List<Integer> muta = Arrays.asList(1, 2, 3); // mutalbe list 🤢
+    List<Integer> imm = List.of(1,2,3); // immutable❤️ list️, java11
+    Set<Integer> set = Set.of(1, 2);// immutable❤️
+    Map<String, Integer> map = Map.of("one", 1, "two", 2);// immutable❤️
+    List<Integer> numbers = new ArrayList<>(IntStream.range(1, 10).boxed()
+//        .collect(Collectors.toList()) // returns mutable list ArrayList 🤢
+        .toList() // returns immutable❤️ list (java17)
+    );
+    Immutable obj = new Immutable(
+        "John",
             new Other("halo"),
             numbers);
 
@@ -28,5 +36,7 @@ public class ImmutablePlay {
   }
 
   private static void unknownFierceCode(Immutable obj) {
+//    obj.list().add(-7); // exceptie acum
+//    System.out.println(obj.list());
   }
 }
